[package]

name = "udp_simple"
description = "Simple UDP library with basic reliability and connections."
version = "0.0.1"
authors = [ "Jacob Van Noort <jakevn@gmail.com>" ]
license = "MIT"

[dependencies.bitbuf]
git = "git://github.com/jakevn/bitbuf"

[dependencies]
time = "*"

[profile.dev]
opt-level = 3